* Added ML lifecycle * Updated index

--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-Hello, world! This is my personal page hosted on GitHub pages.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Index</title>
+</head>
+<body>
+    <h1>Documents List</h1>
+    <ul>
+        <li><a href="machine-learning/lifecycle.html">Machine Learning Lifecycle</a></li>
+        <!-- Add more files and directories as needed -->
+    </ul>
+</body>
+</html>
